crates/test-files/fixtures/compile_errors/trait_impl_mismatch.fe
trait Foo {
    fn this_misses_in_impl(self);
    fn this_has_wrong_args_in_impl(self, val: u8, val2: bool);
    fn this_has_wrong_return_type_in_impl(self) -> bool;
    fn this_has_no_self_in_impl(self);
    fn this_has_self_in_impl();
}

struct Bar {}

impl Foo for Bar {

    fn this_has_wrong_args_in_impl(self, val: u16, val2: Array<u8, 10>) {}
    fn this_has_wrong_return_type_in_impl(self) -> u8 {
        return 0
    }
    fn this_has_no_self_in_impl() {}
    fn this_has_self_in_impl(self) {}
    fn this_does_not_exist_in_trait() {}
}